project(VL_uBMK)

cmake_minimum_required(VERSION 3.1)

if (Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
endif()
if(VL_FOUND)
  include_directories(${VL_INCLUDE_DIR})
endif()
if(CAF_FOUND)
  include_directories(${CAF_INCLUDE_DIR})
endif()
if(UT_FOUND)
  include_directories(${UT_INCLUDE})
endif()

find_file(Boost_LOCKFREE_QUEUE_HPP "boost/lockfree/queue.hpp"
    PATH ${Boost_INCLUDE_DIRS} NO_DEFAULT_PATH)

if(NOT (Boost_ATOMIC_FOUND OR GCCLIBATOMIC_FOUND))
  MESSAGE(STATUS "WARNING: No atomic library, skip pingpong.")
else()
  if(NOT Boost_FOUND OR NOT Boost_LOCKFREE_QUEUE_HPP)
    MESSAGE(STATUS "WARNING: No boost/lockfree/queue.hpp, skip pingpong_boost.")
  else()
    add_boostable_microbmk(pingpong_boost pingpong.cpp)
  endif(NOT Boost_FOUND OR NOT Boost_LOCKFREE_QUEUE_HPP)
  if(NOT GEM5_ROOT)
    MESSAGE(STATUS "WARNING: No gem5 found, skip pingpong_m5.")
  else()
    add_boostable_microbmk(pingpong_m5 pingpong.cpp)
    target_compile_definitions(pingpong_m5 PRIVATE -DM5VL)
  endif(NOT GEM5_ROOT)
  if(ZMQ_STATIC_FOUND OR ZMQ_DYNAMIC_FOUND)
    add_boostable_microbmk(pingpong_zmq pingpong.cpp)
    target_compile_definitions(pingpong_zmq PRIVATE -DZMQ)
    target_include_directories(pingpong_zmq PRIVATE ${ZMQ_INCLUDE_DIR})
    target_link_libraries(pingpong_zmq ${ZMQ_LIBRARY})
    if (ZMQ_STATIC_FOUND)
      target_compile_options(pingpong_zmq PRIVATE -static -pthread)
    endif()
  elseif(NOT (ZMQ_STATIC_FOUND OR ZMQ_DYNAMIC_FOUND))
    MESSAGE(STATUS "WARNING: No zmq library, skip pingpong_zmq.")
  endif()
  if(NOT VL_FOUND)
    MESSAGE(STATUS "WARNING: No libvl found, skip pingpong_vl.")
  else()
    add_boostable_microbmk(pingpong_vl pingpong.cpp)
    target_compile_definitions(pingpong_vl PRIVATE -DVL)
    target_link_libraries(pingpong_vl ${VL_LIBRARY})
    add_boostable_microbmk(pingpong_verbose pingpong.cpp)
    target_compile_definitions(pingpong_verbose PRIVATE -DVL -DVERBOSE)
    target_link_libraries(pingpong_verbose ${VL_LIBRARY})
    add_boostable_microbmk(pingpong_il pingpong.cpp)
    target_compile_definitions(pingpong_il PRIVATE -DVL -DVLINLINE -DNOSYSVL)
    target_link_libraries(pingpong_il ${VLI_LIBRARY})
  endif(NOT VL_FOUND)
  if(NOT CAF_FOUND)
    MESSAGE(STATUS "WARNING: No libcaf found, skip pingpong_qmd.")
  else()
    add_boostable_microbmk(pingpong_qmd pingpong.cpp)
    target_compile_definitions(pingpong_qmd PRIVATE -DCAF)
    target_link_libraries(pingpong_qmd ${CAF_LIBRARY})
  endif(NOT CAF_FOUND)
  if(NOT UT_FOUND)
    MESSAGE(STATUS "WARNING: No libut found, skip pingpong_lrpc.")
  else()
    add_boostable_microbmk(pingpong_lrpc pingpong.cpp)
    target_compile_definitions(pingpong_lrpc PRIVATE -DLRPC)
    target_link_libraries(pingpong_lrpc ${UT_BASE_LIBRARY})
  endif(NOT UT_FOUND)
endif()
