CMAKE_MINIMUM_REQUIRED (VERSION 3.10 FATAL_ERROR)

project(search CXX)

if(USE_MUTEX)
  add_definitions(-DUSE_MUTEX)
endif()

if(VL_FOUND)
  include_directories(${VL_INCLUDE_DIR})
endif()

if (NOT RaftLib_FOUND)
  MESSAGE(STATUS "WARNING: No RaftLib found, skip search.")
else (NOT RaftLib_FOUND)
  if (NOT QTHREAD_FOUND)
    MESSAGE(STATUS "WARNING: No qthread found, skip search_qt.")
  else (NOT QTHREAD_FOUND)
    add_raftbenchmark(search_qt_std bmh.cpp)
    target_compile_definitions(search_qt_std PRIVATE -DUSEQTHREAD=1
        -DSTDALLOC=1)
    add_raftbenchmark(search_qt_dyn bmh.cpp)
    target_compile_definitions(search_qt_dyn PRIVATE -DUSEQTHREAD=1)
    add_custom_target(search_qt)
    add_dependencies(search_qt search_qt_std search_qt_dyn)
    if (NOT VL_FOUND)
      MESSAGE(STATUS "WARNING: No libvl found, skip search_qt_vl.")
    else()
      add_raftbenchmark(search_qt_vl bmh.cpp)
      target_compile_definitions(search_qt_vl PRIVATE -DUSEQTHREAD=1 -DVL=1)
      target_link_libraries(search_qt_vl ${VL_LIBRARY})
      add_dependencies(search_qt search_qt_vl)
    endif()
  endif(NOT QTHREAD_FOUND)
  if (NOT UT_FOUND)
    MESSAGE(STATUS "WARNING: No libut found, skip search_ut.")
  else (NOT UT_FOUND)
    add_raftbenchmark(search_ut_std bmh.cpp)
    target_compile_definitions(search_ut_std PRIVATE -DUSEUT=1 -DSTDALLOC=1)
    add_raftbenchmark(search_ut_dyn bmh.cpp)
    target_compile_definitions(search_ut_dyn PRIVATE -DUSEUT=1)
    add_custom_target(search_ut)
    add_dependencies(search_ut search_ut_std search_ut_dyn)
    if (NOT VL_FOUND)
      MESSAGE(STATUS "WARNING: No libvl found, skip search_ut_vl.")
    else()
      add_raftbenchmark(search_ut_vl bmh.cpp)
      target_compile_definitions(search_ut_vl PRIVATE -DUSEUT=1 -DVL=1)
      target_link_libraries(search_ut_vl ${VL_LIBRARY})
      add_dependencies(search_ut search_ut_vl)
    endif()
  endif(NOT UT_FOUND)
endif()
