CMAKE_MINIMUM_REQUIRED (VERSION 3.10 FATAL_ERROR)

project(streamcluster CXX)

if(VL_FOUND)
  include_directories(${VL_INCLUDE_DIR})
endif()

if (NOT RaftLib_FOUND)
  MESSAGE(STATUS "WARNING: No RaftLib found, skip streamcluster.")
elseif(NOT QTHREAD_FOUND)
  MESSAGE(STATUS "WARNING: No qthread found, skip streamcluster.")
else()
  add_raftbenchmark(streamcluster_std main.cpp raftlib_src.cpp)
  target_compile_definitions(streamcluster_std PRIVATE -DSTDALLOC=1)
  add_raftbenchmark(streamcluster_dyn main.cpp raftlib_src.cpp)
  if (NOT VL_FOUND)
    MESSAGE(STATUS "WARNING: No libvl found, skip streamcluster_vl.")
  else()
    add_raftbenchmark(streamcluster_vl main.cpp raftlib_src.cpp)
    target_compile_definitions(streamcluster_vl PRIVATE -DVL=1)
    target_link_libraries(streamcluster_vl ${VL_LIBRARY})
  endif()
endif()
